# remind-me

./: .env.example  .gitignore  README.md  app.py  db.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notifiers/: zulip_notifier.py
static/: style.css
templates/: index.html  snooze.html  snooze_done.html
tests/: conftest.py  test_app.py  test_db.py  test_zulip_notifier.py
